--- a/manifest.json
+++ b/manifest.json
@@ -25,7 +25,7 @@
     "128": "icons/icon128.png"
   },
   "host_permissions": [
-    "https://api.openai.com/*"
+    "<all_urls>"
   ],
   "web_accessible_resources": [
     {
@@ -34,4 +34,3 @@
     }
   ]
 }
-
